Updated AnalyticsService.java